--- a/primitives/poc/Cargo.toml
+++ b/primitives/poc/Cargo.toml
@@ -10,11 +10,16 @@ repository = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sha3 = "*"
-log = "0.4.17"
-ethereum-types = { workspace = true }
-libsecp256k1 = { workspace = true, features = ["static-context", "hmac"] }
-ethereum = { workspace = true, features = ["with-codec"] }
-serde = "*"
-serde_json = "*"
 sp-std = { workspace = true }
+sp-core = { workspace = true }
+sp-io = { workspace = true }
+rlp = { workspace = true }
+
+[features]
+default = ["std"]
+std = [
+	"sp-std/std",
+    "sp-core/std",
+    "sp-io/std",
+    "rlp/std",
+]
